perl: Update gtk4-demo-editor; Initial commit of custom widget

--- a/perl/perl-gtk4-demo-editor/menus.ui
+++ b/perl/perl-gtk4-demo-editor/menus.ui
@@ -7,7 +7,7 @@
         <item>
           <attribute name="label" translatable="yes">_New</attribute>
           <attribute name="action">app.new</attribute>
-          <attribute name="accel">&lt;Control&gt;n</attribute>
+	  <!--          <attribute name="accel">&lt;Control&gt;n</attribute> -->
         </item>
         <item>
           <attribute name="label" translatable="yes">_Open</attribute>
